--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div>
                 <h3>Planner Premium ULTRA</h3>
                 <p>Organize sua vida completa</p>
-                <p>📧 dllhome25@gmail.com</p>
+                <p>📧 plannerpremiumultra@gmail.com</p>
                 <p>👥 250 mil+ inscritos</p>
             </div>
             <div>
