--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </div>
             <div>
                 <h3>Contato</h3>
-                <p>dllhome25@gmail.com</p>
+                <p>plannerpremiumultra@gmail.com</p>
                 <p>Suporte 24/7</p>
             </div>
         </div>
